--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
-autopep8==1.6.0
-certifi==2021.10.8
+aiogram==2.20
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+Babel==2.9.1
+beautifulsoup4==4.11.1
+bs4==0.0.1
+certifi==2022.5.18.1
 charset-normalizer==2.0.12
-flake8==4.0.1
+frozenlist==1.3.0
 idna==3.3
-mccabe==0.6.1
-psutil==5.9.0
-pycodestyle==2.8.0
-pyflakes==2.4.0
-requests==2.27.1
-toml==0.10.2
+multidict==6.0.2
+pytz==2022.1
+requests==2.28.0
+soupsieve==2.3.2.post1
 urllib3==1.26.9
+yarl==1.7.2
